; ModuleID = '/home/carl/AnghaBench/ios-webkit-debug-proxy/examples/extr_ws_echo_common.c_on_frame.c'
source_filename = "/home/carl/AnghaBench/ios-webkit-debug-proxy/examples/extr_ws_echo_common.c_on_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 (%struct.TYPE_7__*, i32, i32, i32, i8*, i64)*, i32 (%struct.TYPE_7__*, i32, i8*)* }

@WS_SUCCESS = common dso_local global i32 0, align 4
@CLOSE_PROTOCOL_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"Clients must mask\00", align 1
@CLOSE_NORMAL = common dso_local global i32 0, align 4
@WS_ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @on_frame(%struct.TYPE_7__* %0, i32 %1, i32 %2, i32 %3, i8* %4, i64 %5, i32* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_7__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i64, align 8
  %15 = alloca i32*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i8* %4, i8** %13, align 8
  store i64 %5, i64* %14, align 8
  store i32* %6, i32** %15, align 8
  %16 = load i32, i32* %11, align 4
  switch i32 %16, label %59 [
    i32 128, label %17
    i32 132, label %17
    i32 131, label %42
    i32 130, label %49
    i32 129, label %57
  ]

17:                                               ; preds = %7, %7
  %18 = load i32, i32* %10, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %17
  %21 = load i32*, i32** %15, align 8
  store i32 1, i32* %21, align 4
  %22 = load i32, i32* @WS_SUCCESS, align 4
  store i32 %22, i32* %8, align 4
  br label %61

23:                                               ; preds = %17
  %24 = load i32, i32* %12, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %33, label %26

26:                                               ; preds = %23
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 1
  %29 = load i32 (%struct.TYPE_7__*, i32, i8*)*, i32 (%struct.TYPE_7__*, i32, i8*)** %28, align 8
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %31 = load i32, i32* @CLOSE_PROTOCOL_ERROR, align 4
  %32 = call i32 %29(%struct.TYPE_7__* %30, i32 %31, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  store i32 %32, i32* %8, align 4
  br label %61

33:                                               ; preds = %23
  %34 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %35 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %34, i32 0, i32 0
  %36 = load i32 (%struct.TYPE_7__*, i32, i32, i32, i8*, i64)*, i32 (%struct.TYPE_7__*, i32, i32, i32, i8*, i64)** %35, align 8
  %37 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %38 = load i32, i32* %11, align 4
  %39 = load i8*, i8** %13, align 8
  %40 = load i64, i64* %14, align 8
  %41 = call i32 %36(%struct.TYPE_7__* %37, i32 1, i32 %38, i32 0, i8* %39, i64 %40)
  store i32 %41, i32* %8, align 4
  br label %61

42:                                               ; preds = %7
  %43 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %44 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %43, i32 0, i32 1
  %45 = load i32 (%struct.TYPE_7__*, i32, i8*)*, i32 (%struct.TYPE_7__*, i32, i8*)** %44, align 8
  %46 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %47 = load i32, i32* @CLOSE_NORMAL, align 4
  %48 = call i32 %45(%struct.TYPE_7__* %46, i32 %47, i8* null)
  store i32 %48, i32* %8, align 4
  br label %61

49:                                               ; preds = %7
  %50 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %51 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %50, i32 0, i32 0
  %52 = load i32 (%struct.TYPE_7__*, i32, i32, i32, i8*, i64)*, i32 (%struct.TYPE_7__*, i32, i32, i32, i8*, i64)** %51, align 8
  %53 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %54 = load i8*, i8** %13, align 8
  %55 = load i64, i64* %14, align 8
  %56 = call i32 %52(%struct.TYPE_7__* %53, i32 1, i32 129, i32 0, i8* %54, i64 %55)
  store i32 %56, i32* %8, align 4
  br label %61

57:                                               ; preds = %7
  %58 = load i32, i32* @WS_SUCCESS, align 4
  store i32 %58, i32* %8, align 4
  br label %61

59:                                               ; preds = %7
  %60 = load i32, i32* @WS_ERROR, align 4
  store i32 %60, i32* %8, align 4
  br label %61

61:                                               ; preds = %59, %57, %49, %42, %33, %26, %20
  %62 = load i32, i32* %8, align 4
  ret i32 %62
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
